[project]
name = "resume_enhancer"
version = "0.1.0"
description = "AI-powered resume enhancement using crewAI multi-agent system"
readme = "README.md"
authors = [{ name = "Elvin", email = "you@example.com" }]
keywords = ["resume", "ai", "crewai", "enhancement", "job-search"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.141.0,<1.0.0",
    "fpdf2>=2.8.4",
]

[project.scripts]
resume_enhancer = "resume_enhancer.main:run"
run_crew = "resume_enhancer.main:run"
train = "resume_enhancer.main:train"
replay = "resume_enhancer.main:replay"
test = "resume_enhancer.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"

[tool.uv.workspace]
members = [
    ".",
]

[tool.uv.sources]
resume-enhancer = { workspace = true }
